# WorkForce-Solutions

./: .gitignore  README.md  run_selenium_tests.bat  run_selenium_tests.ps1
backend/app/: config.py  database.py  main.py  pyproject.toml
backend/app/models/: __init__.py  application.py  opportunity.py  post.py  user.py
backend/app/routes/: __init__.py  auth.py  network.py  opportunities.py  posts.py  profile.py
backend/app/schemas/: __init__.py  application.py  opportunity.py  post.py  user.py
backend/app/tests/: conftest.py  test_applications.py  test_auth.py  test_main.py  test_opportunities.py  test_posts.py  test_profile.py
backend/app/utils/: __init__.py  auth.py  dependencies.py
frontend/: SHADCN_SETUP.md  components.json  index.html  package.json  tailwind.config.ts  tsconfig.app.json  vitest.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/applicants/: Applicants.tsx
frontend/src/components/auth/: AuthModal.tsx
frontend/src/components/common/: FeatureCard.tsx  FilterButton.tsx  ModeBadge.tsx
frontend/src/components/dashboard/: DashboardNav.tsx  NavButton.tsx
frontend/src/components/network/: NetworkDirectory.tsx  (+1 more)
frontend/src/config/: constants.ts
frontend/src/contexts/: AuthContext.tsx  useAuth.ts
frontend/src/pages/: Dashboard.tsx  LandingPage.tsx
frontend/src/services/: api.ts
frontend/src/tests/: components.test.ts  frontend.test.ts  setup.ts  utils.test.ts
frontend/src/types/: index.ts
tests/: SELENIUM_TEST_GUIDE.md  selenium-requirements.txt  selenium_tests.py  selenium_tests_new_features.py
(+16 files in other folders)
